fix: make reactions-menu whole size visible

--- a/src/components/Message/Message.module.css
+++ b/src/components/Message/Message.module.css
@@ -227,15 +227,11 @@
   left: 50px;
 }
 
-.actions-and-reactions-wrapper {
-  position: relative;
-}
-
 .reactions-menu {
   position: absolute;
-  bottom: 0;
-  right: 0;
-  transform: translate(0%, -50%);
+  bottom: 50%;
+  right: 50%;
+  transform: translate(50%, -30%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -243,14 +239,14 @@
   background-color: #4d4b4b;
   padding: 0.5rem;
   border-radius: 1rem;
-  border-bottom-right-radius: 0;
-  border: 2px solid #353636;
+  border: 3px solid #353636;
   z-index: 10000 !important;
 }
 
 .received .reactions-menu {
   right: auto;
-  transform: translate(-70%, -50%);
+  left: 50%;
+  transform: translate(-50%, -30%);
 }
 
 .reactions-menu svg {
